# cogito

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
include/cogito/: cogito.cuh  cogito.h  memory.cuh  ptx.cuh  tensor.cuh
include/cogito/blas/: blas.cuh
include/cogito/blas/axpy/: thread_level.cuh
include/cogito/blas/gemm/: block_level.cuh  gemm.cuh  thread_level.cuh  warp_level.cuh
include/cogito/blas/transpose/: block_level.cuh  transpose.cuh
include/cogito/common/: ldst.cuh  operator.cuh
include/cogito/dnn/: dnn.cuh
include/cogito/dnn/activation/: prelu.cuh  sigmoid.cuh  softmax.cuh
include/cogito/dnn/conv/: conv.cuh
include/cogito/dnn/normalization/: batchnorm2d.cuh
include/cogito/general/: general.cuh
include/cogito/general/elementwise/: block_level.cuh  elementwise.cuh  thread_level.cuh
include/cogito/general/reduce/: block_level.cuh  block_level.h  reduce.cuh  thread_level.cuh  thread_level.h  warp_level.cuh  warp_level.h
include/cogito/general/scan/: thread_level.cuh
include/cotigo/: macro.h
test/: CMakeLists.txt  test.cu
test/unittest/: profiler.cuh  test.cpp  utils.cuh
test/unittest/blas/: fixture_blas.cuh  test_blas.cuh  test_gemm.cuh
test/unittest/common/: profiler.cuh  utils.cuh
test/unittest/dnn/: fixture_dnn.cuh  test_dnn.cuh  test_sigmoid.cuh  test_softmax.cuh
test/unittest/general/: fixture_general.cuh  test_elementwise.cuh  test_general.cuh  test_reduce.cuh
